Sass Structure and About Section

--- a/src/resources/sass/main.scss
+++ b/src/resources/sass/main.scss
@@ -9,5 +9,8 @@
 
 @import "components/button";
 @import "components/header";
+@import "components/about";
+
+@import "layout/grid";
 
 @import "pages/home";
