Added Features Section

--- a/src/resources/sass/main.scss
+++ b/src/resources/sass/main.scss
@@ -1,16 +1,17 @@
-@import "abstracts/functions";
-@import "abstracts/mixins";
-@import "abstracts/variables";
+@import 'abstracts/functions';
+@import 'abstracts/mixins';
+@import 'abstracts/variables';
 
-@import "base/animations";
-@import "base/base";
-@import "base/typography";
-@import "base/utilities";
+@import 'base/animations';
+@import 'base/base';
+@import 'base/typography';
+@import 'base/utilities';
 
-@import "components/button";
-@import "components/header";
-@import "components/about";
+@import 'components/button';
+@import 'components/header';
+@import 'components/about';
+@import 'components/features';
 
-@import "layout/grid";
+@import 'layout/grid';
 
-@import "pages/home";
+@import 'pages/home';
