Added Testimonials, Tours, and Booking sections

--- a/src/resources/sass/main.scss
+++ b/src/resources/sass/main.scss
@@ -8,9 +8,14 @@
 @import 'base/utilities';
 
 @import 'components/button';
+@import 'components/bgVideo';
 @import 'components/header';
 @import 'components/about';
 @import 'components/features';
+@import 'components/tours';
+@import 'components/testimonials';
+@import 'components/booking';
+@import 'components/form';
 
 @import 'layout/grid';
 
