--- a/src/resources/sass/pages/_home.scss
+++ b/src/resources/sass/pages/_home.scss
@@ -21,3 +21,23 @@
     transform: skewY(7deg);
   }
 }
+
+.section-tours {
+  background-color: $color-grey-light-1;
+  padding: 25rem 0 15rem 0;
+  margin-top: -10rem;
+}
+
+.section-testimonials {
+  position: relative;
+  padding: 15rem 0;
+}
+
+.section-book {
+  padding: 15rem 0;
+  background-image: linear-gradient(
+    to right bottom,
+    $color-primary-light,
+    $color-primary-dark
+  );
+}
