--- a/src/resources/sass/base/_utilities.scss
+++ b/src/resources/sass/base/_utilities.scss
@@ -14,6 +14,9 @@
   margin-bottom: 8rem !important;
 }
 
+.u-margin-top-medium {
+  margin-top: 4rem !important;
+}
 .u-margin-top-large {
   margin-top: 8rem !important;
 }
