--- a/src/resources/sass/components/sections/_booking.scss
+++ b/src/resources/sass/components/sections/_booking.scss
@@ -6,11 +6,9 @@
       transparent 50%
     ),
     url(../img/nat-10.jpg);
-  background-size: 100%;
+  background-size: cover;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
-
-  height: 50rem;
 
   &__form {
     width: 50%;
