--- a/src/resources/sass/main.scss
+++ b/src/resources/sass/main.scss
@@ -10,12 +10,14 @@
 @import 'components/UI/button';
 @import 'components/UI/bgVideo';
 
+@import 'components/form';
+@import 'components/popup';
+
 @import 'components/sections/about';
 @import 'components/sections/features';
 @import 'components/sections/tours';
 @import 'components/sections/testimonials';
 @import 'components/sections/booking';
-@import 'components/sections/form';
 
 @import 'layout/header';
 @import 'layout/footer';
