--- a/src/resources/sass/components/_form.scss
+++ b/src/resources/sass/components/_form.scss
@@ -72,15 +72,12 @@
     top: -0.4rem;
 
     &::after {
+      @include absCenter;
       content: '';
       display: block;
       height: 1.3rem;
       width: 1.3rem;
       border-radius: 50%;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
       background-color: $color-primary;
       opacity: 0;
       transition: opacity 0.2s;
