--- a/src/resources/sass/base/_utilities.scss
+++ b/src/resources/sass/base/_utilities.scss
@@ -8,10 +8,16 @@
 
 .u-margin-bottom-medium {
   margin-bottom: 4rem !important;
+  @include respond(tab-port) {
+    margin-bottom: 3rem !important;
+  }
 }
 
 .u-margin-bottom-large {
   margin-bottom: 8rem !important;
+  @include respond(tab-port) {
+    margin-bottom: 5rem !important;
+  }
 }
 
 .u-margin-top-medium {
