--- a/src/resources/sass/components/_form.scss
+++ b/src/resources/sass/components/_form.scss
@@ -15,6 +15,10 @@
     display: block;
     transition: all 0.3s;
 
+    @include respond(tab-port) {
+      width: 100%;
+    }
+
     &:focus {
       outline: none;
       box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
@@ -48,6 +52,11 @@
   &__radio-group {
     padding: 0.6rem 2rem;
     display: inline-block;
+
+    @include respond(tab-port) {
+      width: 100%;
+      margin-bottom: 2rem;
+    }
   }
 
   &__radio-input {
