--- a/src/resources/sass/components/_popup.scss
+++ b/src/resources/sass/components/_popup.scss
@@ -21,11 +21,22 @@
     opacity: 0;
     transform: translate(-50%, -50%) scale(0.2);
     transition: all 0.4s 0.2s;
+
+    @include respond(tab-land) {
+      width: 95%;
+      display: block;
+    }
   }
 
   &__left {
     width: 33.3333333%;
     display: table-cell;
+
+    @include respond(tab-land) {
+      display: block;
+      width: 100%;
+      overflow: hidden;
+    }
   }
 
   &__right {
@@ -33,11 +44,27 @@
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem;
+
+    @include respond(tab-land) {
+      display: block;
+      width: 100%;
+    }
   }
 
   &__img {
     display: block;
     width: 100%;
+    @include respond(tab-land) {
+      display: inline-block;
+      width: 50%;
+      transform: translateX(2rem) scale(1.08);
+    }
+    @include respond(tab-port) {
+      transform: translateX(2rem) scale(1.12);
+    }
+    @include respond(phone) {
+      transform: translateX(2rem) scale(1.16);
+    }
   }
 
   &__text {
@@ -56,6 +83,12 @@
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto;
+  }
+
+  &__button {
+    @include respond(tab-land) {
+      text-align: center;
+    }
   }
 
   //OPEN STATES
