--- a/src/resources/sass/components/sections/_tours.scss
+++ b/src/resources/sass/components/sections/_tours.scss
@@ -12,6 +12,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     border-radius: 3px;
     overflow: hidden;
@@ -176,7 +177,7 @@
     font-weight: 100;
   }
 
-  @include respond(tab-port) {
+  @media only screen and (max-width: 56.25em), only screen and (hover: none) {
     // FUNCTIONALITY
     height: auto;
     border-radius: 3px;
