--- a/src/resources/sass/layout/_grid.scss
+++ b/src/resources/sass/layout/_grid.scss
@@ -10,9 +10,12 @@
     }
   }
 
+  @include respond(tab-land) {
+    padding: 0 3rem;
+  }
+
   @include respond(tab-port) {
     max-width: 50rem;
-    padding: 0 3rem;
   }
 
   @include clearfix;
