--- a/src/resources/sass/layout/_navigation.scss
+++ b/src/resources/sass/layout/_navigation.scss
@@ -61,6 +61,7 @@
 
     opacity: 0;
     width: 0;
+    visibility: hidden;
     transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   }
 
@@ -115,6 +116,7 @@
   &__checkbox:checked ~ &__nav {
     opacity: 1;
     width: 100%;
+    visibility: visible;
   }
 
   //ICON
